codes/EMPIRE/empire_log/empire-32451393_30.err
  File "/storage/work/tzk5446/NeurMHSP/codes/EMPIRE/REDUCED_NEUREMPIRE.py", line 249
    model.exp_sload_period = Param(model.Period, initialize = , mutable = True)
                                                              ^
SyntaxError: invalid syntax
